--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent1">#b3174c</color>
     <color name="sentButton">#4D98FC</color>
     <color name="saveButton">#4EC96F</color>
     <color name="sentButton1">#1468d9</color>
