--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:text="我的二维码"
-        android:textSize="22sp" />
+        android:textSize="20sp" />
 
     <ImageView
         android:id="@+id/qrcode_image"
@@ -25,6 +25,7 @@
         android:background="#fff" />
 
     <Button
+        android:id="@+id/button_start"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/qrcode_image"
