--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -27,13 +27,23 @@
         android:background="#fff" />
 
     <Button
-        android:layout_marginTop="30dp"
         android:id="@+id/button_start"
-        android:layout_width="240dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/qrcode_image"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
         android:background="@drawable/start_button_selector"
         android:text="开始"
+        android:textColor="@color/white" />
+
+    <Button
+        android:id="@+id/button_share"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_start"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/start_button_selector"
+        android:text="分享"
         android:textColor="@color/white" />
 </RelativeLayout>
