--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -17,4 +17,13 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:background="@android:color/transparent" />
+
+    <Button
+        android:id="@+id/scan_pic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/start_button_selector"
+        android:text="扫图"
+        android:textColor="@color/white" />
 </RelativeLayout>
